change dataset to table in protocol
